include/generated/ffi_v.h

// CLASS: BView
BArchivable * BView_Instantiate(BMessage * archive);
void BView_AttachedToWindow(BView * self);
void BView_AllAttached(BView * self);
void BView_DetachedFromWindow(BView * self);
void BView_AllDetached(BView * self);
void BView_Draw(BView * self, BRect* update_rect);
void BView_MouseDown(BView * self, BPoint* where_);
void BView_MouseUp(BView * self, BPoint* where_);
void BView_MouseMoved(BView * self, BPoint* where_, uint32 code, const BMessage * drag_message);
void BView_WindowActivated(BView * self, bool active);
void BView_KeyDown(BView * self, const char * bytes, int32 num_bytes);
void BView_KeyUp(BView * self, const char * bytes, int32 num_bytes);
void BView_Pulse(BView * self);
void BView_FrameMoved(BView * self, BPoint* new_position);
void BView_FrameResized(BView * self, float new_width, float new_height);
void BView_TargetedByScrollView(BView * self, BScrollView * scroll_view);
void BView_DrawAfterChildren(BView * self, BRect* update_rect);
void BView_AddChild(BView * self, BView * child, BView * before);
bool BView_AddChild1(BView * self, BLayoutItem * child);
bool BView_RemoveChild(BView * self, BView * child);
int32 BView_CountChildren(const BView * self);
BView * BView_ChildAt(const BView * self, int32 index);
BView * BView_NextSibling(const BView * self);
BView * BView_PreviousSibling(const BView * self);
bool BView_RemoveSelf(BView * self);
BView * BView_FindView(const BView * self, const char * name);
BView * BView_Parent(const BView * self);
void BView_BeginRectTracking(BView * self, BRect* start_rect, uint32 style);
void BView_EndRectTracking(BView * self);
void BView_GetMouse(BView * self, BPoint * location, uint32 * buttons, bool check_message_queue);
void BView_DragMessage(BView * self, BMessage * message, BRect* drag_rect, BHandler * reply_to);
void BView_DragMessage1(BView * self, BMessage * message, BBitmap * bitmap, BPoint* offset, BHandler * reply_to);
void BView_DragMessage2(BView * self, BMessage * message, BBitmap * bitmap, drawing_mode drag_mode, BPoint* offset, BHandler * reply_to);
status_t BView_SetEventMask(BView * self, uint32 mask, uint32 options);
uint32 BView_EventMask(BView * self);
status_t BView_SetMouseEventMask(BView * self, uint32 mask, uint32 options);
void BView_ScrollBy(BView * self, float dh, float dv);
void BView_ScrollTo(BView * self, float x, float y);
void BView_ScrollTo1(BView * self, BPoint* where_);
void BView_MakeFocus(BView * self, bool focus);
void BView_ConvertToScreen(const BView * self, BPoint * point);
void BView_ConvertFromScreen(const BView * self, BPoint * point);
void BView_ConvertToScreen2(const BView * self, BRect * rect);
void BView_ConvertFromScreen2(const BView * self, BRect * rect);
void BView_ConvertToParent(const BView * self, BPoint * point);
void BView_ConvertFromParent(const BView * self, BPoint * point);
void BView_ConvertToParent2(const BView * self, BRect * rect);
void BView_ConvertFromParent2(const BView * self, BRect * rect);
void BView_SetFlags(BView * self, uint32 flags);
uint32 BView_Flags(const BView * self);
void BView_GetClippingRegion(const BView * self, BRegion * region);
void BView_ConstrainClippingRegion(BView * self, BRegion * region);
void BView_ClipToPicture(BView * self, BPicture * picture, BPoint* where_, bool sync);
void BView_ClipToInversePicture(BView * self, BPicture * picture, BPoint* where_, bool sync);
void BView_ClipToRect(BView * self, BRect* rect);
void BView_ClipToInverseRect(BView * self, BRect* rect);
void BView_ClipToShape(BView * self, BShape * shape);
void BView_ClipToInverseShape(BView * self, BShape * shape);
void BView_SetDrawingMode(BView * self, drawing_mode mode);
drawing_mode BView_DrawingMode(const BView * self);
void BView_GetBlendingMode(const BView * self, source_alpha * src_alpha, alpha_function * alpha_func);
void BView_SetPenSize(BView * self, float size);
float BView_PenSize(const BView * self);
bool BView_HasDefaultColors(const BView * self);
bool BView_HasSystemColors(const BView * self);
void BView_AdoptParentColors(BView * self);
void BView_AdoptSystemColors(BView * self);
void BView_AdoptViewColors(BView * self, BView * view);
void BView_SetViewUIColor(BView * self, color_which which, float tint);
color_which BView_ViewUIColor(const BView * self, float * tint);
void BView_SetHighUIColor(BView * self, color_which which, float tint);
color_which BView_HighUIColor(const BView * self, float * tint);
void BView_SetLowUIColor(BView * self, color_which which, float tint);
color_which BView_LowUIColor(const BView * self, float * tint);
cap_mode BView_LineCapMode(const BView * self);
float BView_LineMiterLimit(const BView * self);
void BView_SetFillRule(BView * self, int32 rule);
int32 BView_FillRule(const BView * self);
void BView_SetOrigin(BView * self, BPoint* where_);
void BView_SetOrigin1(BView * self, float x, float y);
BPoint *BView_Origin(const BView * self);
void BView_TranslateBy(BView * self, double x, double y);
void BView_ScaleBy(BView * self, double x, double y);
void BView_RotateBy(BView * self, double angle_radians);
void BView_PushState(BView * self);
void BView_PopState(BView * self);
void BView_MovePenTo(BView * self, BPoint* pt);
void BView_MovePenTo1(BView * self, float x, float y);
void BView_MovePenBy(BView * self, float x, float y);
BPoint *BView_PenLocation(const BView * self);
void BView_SetFont(BView * self, const BFont * font, uint32 mask);
void BView_GetFont(const BView * self, BFont * font);
void BView_TruncateString(const BView * self, BString * in_out, uint32 mode, float width);
float BView_StringWidth(const BView * self, const char * string);
float BView_StringWidth1(const BView * self, const char * string, int32 length);
void BView_SetFontSize(BView * self, float size);
void BView_ForceFontAliasing(BView * self, bool enable);
void BView_GetFontHeight(const BView * self, font_height * height);
void BView_SetScale(const BView * self, float scale);
float BView_Scale(const BView * self);
void BView_SetViewBitmap(BView * self, const BBitmap * bitmap, BRect* src_rect, BRect* dst_rect, uint32 follow_flags, uint32 options);
void BView_SetViewBitmap1(BView * self, const BBitmap * bitmap, uint32 follow_flags, uint32 options);
void BView_ClearViewBitmap(BView * self);
status_t BView_SetViewOverlay(BView * self, const BBitmap * overlay, BRect* src_rect, BRect* dst_rect, rgb_color * color_key, uint32 follow_flags, uint32 options);
status_t BView_SetViewOverlay1(BView * self, const BBitmap * overlay, rgb_color * color_key, uint32 follow_flags, uint32 options);
void BView_ClearViewOverlay(BView * self);
void BView_BeginLineArray(BView * self, int32 count);
void BView_EndLineArray(BView * self);