src/generated/ffi_v.rs


    // BView
    pub fn BView_Instantiate(archive: *mut c_void) -> *mut c_void;
    pub fn BView_AttachedToWindow(self_: *mut c_void);
    pub fn BView_AllAttached(self_: *mut c_void);
    pub fn BView_DetachedFromWindow(self_: *mut c_void);
    pub fn BView_AllDetached(self_: *mut c_void);
    pub fn BView_Draw(self_: *mut c_void, update_rect: *mut c_void);
    pub fn BView_MouseDown(self_: *mut c_void, where_: *mut c_void);
    pub fn BView_MouseUp(self_: *mut c_void, where_: *mut c_void);
    pub fn BView_MouseMoved(
        self_: *mut c_void,
        where_: *mut c_void,
        code: u32,
        drag_message: *const c_void,
    );
    pub fn BView_WindowActivated(self_: *mut c_void, active: bool);
    pub fn BView_KeyDown(self_: *mut c_void, bytes: *const c_char, num_bytes: i32);
    pub fn BView_KeyUp(self_: *mut c_void, bytes: *const c_char, num_bytes: i32);
    pub fn BView_Pulse(self_: *mut c_void);
    pub fn BView_FrameMoved(self_: *mut c_void, new_position: *mut c_void);
    pub fn BView_FrameResized(self_: *mut c_void, new_width: c_float, new_height: c_float);
    pub fn BView_TargetedByScrollView(self_: *mut c_void, scroll_view: *mut c_void);
    pub fn BView_DrawAfterChildren(self_: *mut c_void, update_rect: *mut c_void);
    pub fn BView_AddChild(self_: *mut c_void, child: *mut c_void, before: *mut c_void);
    pub fn BView_AddChild1(self_: *mut c_void, child: *mut c_void) -> bool;
    pub fn BView_RemoveChild(self_: *mut c_void, child: *mut c_void) -> bool;
    pub fn BView_CountChildren(self_: *const c_void) -> i32;
    pub fn BView_ChildAt(self_: *const c_void, index: i32) -> *mut c_void;
    pub fn BView_NextSibling(self_: *const c_void) -> *mut c_void;
    pub fn BView_PreviousSibling(self_: *const c_void) -> *mut c_void;
    pub fn BView_RemoveSelf(self_: *mut c_void) -> bool;
    pub fn BView_FindView(self_: *const c_void, name: *const c_char) -> *mut c_void;
    pub fn BView_Parent(self_: *const c_void) -> *mut c_void;
    pub fn BView_BeginRectTracking(self_: *mut c_void, start_rect: *mut c_void, style: u32);
    pub fn BView_EndRectTracking(self_: *mut c_void);
    pub fn BView_GetMouse(
        self_: *mut c_void,
        location: *mut c_void,
        buttons: *mut c_void,
        check_message_queue: bool,
    );
    pub fn BView_DragMessage(
        self_: *mut c_void,
        message: *mut c_void,
        drag_rect: *mut c_void,
        reply_to: *mut c_void,
    );
    pub fn BView_DragMessage1(
        self_: *mut c_void,
        message: *mut c_void,
        bitmap: *mut c_void,
        offset: *mut c_void,
        reply_to: *mut c_void,
    );
    pub fn BView_DragMessage2(
        self_: *mut c_void,
        message: *mut c_void,
        bitmap: *mut c_void,
        drag_mode: drawing_mode,
        offset: *mut c_void,
        reply_to: *mut c_void,
    );
    pub fn BView_SetEventMask(self_: *mut c_void, mask: u32, options: u32) -> status_t;
    pub fn BView_EventMask(self_: *mut c_void) -> u32;
    pub fn BView_SetMouseEventMask(self_: *mut c_void, mask: u32, options: u32) -> status_t;
    pub fn BView_ScrollBy(self_: *mut c_void, dh: c_float, dv: c_float);
    pub fn BView_ScrollTo(self_: *mut c_void, x: c_float, y: c_float);
    pub fn BView_ScrollTo1(self_: *mut c_void, where_: *mut c_void);
    pub fn BView_MakeFocus(self_: *mut c_void, focus: bool);
    // NOT_SUPPORTED: pub fn BView_ScrollBar(self_: *const c_void, direction: orientation) -> *mut c_void;
    pub fn BView_ConvertToScreen(self_: *const c_void, point: *mut c_void);
    // BLOCKED: pub fn BView_ConvertToScreen1(self_: *const c_void, point: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertFromScreen(self_: *const c_void, point: *mut c_void);
    // BLOCKED: pub fn BView_ConvertFromScreen1(self_: *const c_void, point: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertToScreen2(self_: *const c_void, rect: *mut c_void);
    // BLOCKED: pub fn BView_ConvertToScreen3(self_: *const c_void, rect: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertFromScreen2(self_: *const c_void, rect: *mut c_void);
    // BLOCKED: pub fn BView_ConvertFromScreen3(self_: *const c_void, rect: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertToParent(self_: *const c_void, point: *mut c_void);
    // BLOCKED: pub fn BView_ConvertToParent1(self_: *const c_void, point: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertFromParent(self_: *const c_void, point: *mut c_void);
    // BLOCKED: pub fn BView_ConvertFromParent1(self_: *const c_void, point: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertToParent2(self_: *const c_void, rect: *mut c_void);
    // BLOCKED: pub fn BView_ConvertToParent3(self_: *const c_void, rect: *mut c_void) -> *mut c_void;
    pub fn BView_ConvertFromParent2(self_: *const c_void, rect: *mut c_void);
    // BLOCKED: pub fn BView_ConvertFromParent3(self_: *const c_void, rect: *mut c_void) -> *mut c_void;
    pub fn BView_SetFlags(self_: *mut c_void, flags: u32);
    pub fn BView_Flags(self_: *const c_void) -> u32;
    pub fn BView_GetClippingRegion(self_: *const c_void, region: *mut c_void);
    pub fn BView_ConstrainClippingRegion(self_: *mut c_void, region: *mut c_void);
    pub fn BView_ClipToPicture(
        self_: *mut c_void,
        picture: *mut c_void,
        where_: *mut c_void,
        sync: bool,
    );
    pub fn BView_ClipToInversePicture(
        self_: *mut c_void,
        picture: *mut c_void,
        where_: *mut c_void,
        sync: bool,
    );
    pub fn BView_ClipToRect(self_: *mut c_void, rect: *mut c_void);
    pub fn BView_ClipToInverseRect(self_: *mut c_void, rect: *mut c_void);
    pub fn BView_ClipToShape(self_: *mut c_void, shape: *mut c_void);
    pub fn BView_ClipToInverseShape(self_: *mut c_void, shape: *mut c_void);
    pub fn BView_SetDrawingMode(self_: *mut c_void, mode: drawing_mode);
    pub fn BView_DrawingMode(self_: *const c_void) -> drawing_mode;
    // NOT_SUPPORTED: pub fn BView_SetBlendingMode(self_: *mut c_void, src_alpha: source_alpha, alpha_func: alpha_function);
    pub fn BView_GetBlendingMode(
        self_: *const c_void,
        src_alpha: *mut c_void,
        alpha_func: *mut c_void,
    );
    pub fn BView_SetPenSize(self_: *mut c_void, size: c_float);
    pub fn BView_PenSize(self_: *const c_void) -> c_float;
    pub fn BView_HasDefaultColors(self_: *const c_void) -> bool;
    pub fn BView_HasSystemColors(self_: *const c_void) -> bool;
    pub fn BView_AdoptParentColors(self_: *mut c_void);
    pub fn BView_AdoptSystemColors(self_: *mut c_void);
    pub fn BView_AdoptViewColors(self_: *mut c_void, view: *mut c_void);
    // NOT_SUPPORTED: pub fn BView_SetViewColor(self_: *mut c_void, color: rgb_color);
    // NOT_SUPPORTED: pub fn BView_SetViewColor1(self_: *mut c_void, red: uchar, green: uchar, blue: uchar, alpha: uchar);
    // NOT_SUPPORTED: pub fn BView_ViewColor(self_: *const c_void) -> rgb_color;
    pub fn BView_SetViewUIColor(self_: *mut c_void, which: color_which, tint: c_float);
    pub fn BView_ViewUIColor(self_: *const c_void, tint: *mut c_void) -> color_which;
    // NOT_SUPPORTED: pub fn BView_SetHighColor(self_: *mut c_void, color: rgb_color);
    // NOT_SUPPORTED: pub fn BView_SetHighColor1(self_: *mut c_void, red: uchar, green: uchar, blue: uchar, alpha: uchar);
    // NOT_SUPPORTED: pub fn BView_HighColor(self_: *const c_void) -> rgb_color;
    pub fn BView_SetHighUIColor(self_: *mut c_void, which: color_which, tint: c_float);
    pub fn BView_HighUIColor(self_: *const c_void, tint: *mut c_void) -> color_which;
    // NOT_SUPPORTED: pub fn BView_SetLowColor(self_: *mut c_void, color: rgb_color);
    // NOT_SUPPORTED: pub fn BView_SetLowColor1(self_: *mut c_void, red: uchar, green: uchar, blue: uchar, alpha: uchar);
    // NOT_SUPPORTED: pub fn BView_LowColor(self_: *const c_void) -> rgb_color;
    pub fn BView_SetLowUIColor(self_: *mut c_void, which: color_which, tint: c_float);
    pub fn BView_LowUIColor(self_: *const c_void, tint: *mut c_void) -> color_which;
    // NOT_SUPPORTED: pub fn BView_SetLineMode(self_: *mut c_void, line_cap: cap_mode, line_join: join_mode, miter_limit: c_float);
    // NOT_SUPPORTED: pub fn BView_LineJoinMode(self_: *const c_void) -> join_mode;
    // NOT_SUPPORTED: pub fn BView_LineCapMode(self_: *const c_void) -> cap_mode;
    pub fn BView_LineMiterLimit(self_: *const c_void) -> c_float;
    pub fn BView_SetFillRule(self_: *mut c_void, rule: i32);
    pub fn BView_FillRule(self_: *const c_void) -> i32;
    pub fn BView_SetOrigin(self_: *mut c_void, where_: *mut c_void);
    pub fn BView_SetOrigin1(self_: *mut c_void, x: c_float, y: c_float);
    pub fn BView_Origin(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn BView_SetTransform(self_: *mut c_void, transform: BAffineTransform);
    // NOT_SUPPORTED: pub fn BView_Transform(self_: *const c_void) -> BAffineTransform;
    pub fn BView_TranslateBy(self_: *mut c_void, x: c_double, y: c_double);
    pub fn BView_ScaleBy(self_: *mut c_void, x: c_double, y: c_double);
    pub fn BView_RotateBy(self_: *mut c_void, angle_radians: c_double);
    // NOT_SUPPORTED: pub fn BView_TransformTo(self_: *const c_void, basis: coordinate_space) -> BAffineTransform;
    pub fn BView_PushState(self_: *mut c_void);
    pub fn BView_PopState(self_: *mut c_void);
    pub fn BView_MovePenTo(self_: *mut c_void, pt: *mut c_void);
    pub fn BView_MovePenTo1(self_: *mut c_void, x: c_float, y: c_float);
    pub fn BView_MovePenBy(self_: *mut c_void, x: c_float, y: c_float);
    pub fn BView_PenLocation(self_: *const c_void) -> *mut c_void;
    pub fn BView_SetFont(self_: *mut c_void, font: *const c_void, mask: u32);
    pub fn BView_GetFont(self_: *const c_void, font: *mut c_void);
    pub fn BView_TruncateString(
        self_: *const c_void,
        in_out: *mut c_void,
        mode: u32,
        width: c_float,
    );
    pub fn BView_StringWidth(self_: *const c_void, string: *const c_char) -> c_float;
    pub fn BView_StringWidth1(self_: *const c_void, string: *const c_char, length: i32) -> c_float;
    // NOT_SUPPORTED: pub fn BView_GetStringWidths(self_: *const c_void, string_array: *mut c_void, length_array: i32, num_strings: i32, width_array: c_float);
    pub fn BView_SetFontSize(self_: *mut c_void, size: c_float);
    pub fn BView_ForceFontAliasing(self_: *mut c_void, enable: bool);
    pub fn BView_GetFontHeight(self_: *const c_void, height: *mut c_void);
    pub fn BView_SetScale(self_: *const c_void, scale: c_float);
    pub fn BView_Scale(self_: *const c_void) -> c_float;
    pub fn BView_SetViewBitmap(
        self_: *mut c_void,
        bitmap: *const c_void,
        src_rect: *mut c_void,
        dst_rect: *mut c_void,
        follow_flags: u32,
        options: u32,
    );
    pub fn BView_SetViewBitmap1(
        self_: *mut c_void,
        bitmap: *const c_void,
        follow_flags: u32,
        options: u32,
    );
    pub fn BView_ClearViewBitmap(self_: *mut c_void);
    pub fn BView_SetViewOverlay(
        self_: *mut c_void,
        overlay: *const c_void,
        src_rect: *mut c_void,
        dst_rect: *mut c_void,
        color_key: *mut c_void,
        follow_flags: u32,
        options: u32,
    ) -> status_t;
    pub fn BView_SetViewOverlay1(
        self_: *mut c_void,
        overlay: *const c_void,
        color_key: *mut c_void,
        follow_flags: u32,
        options: u32,
    ) -> status_t;
    pub fn BView_ClearViewOverlay(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn BView_StrokeLine(self_: *mut c_void, to_point: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokeLine1(self_: *mut c_void, start: *mut c_void, end: *mut c_void, pattern: ::pattern);
    pub fn BView_BeginLineArray(self_: *mut c_void, count: i32);
    // NOT_SUPPORTED: pub fn BView_AddLine(self_: *mut c_void, start: *mut c_void, end: *mut c_void, color: rgb_color);
    pub fn BView_EndLineArray(self_: *mut c_void);
